--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="static/techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="static/tech12.png" alt="tc-logo">
     <img class="press-img" src="static/tnw.png" alt="tnw-logo">
     <img class="press-img" src="static/bizinsider.png" alt="biz-insider-logo">
     <img class="press-img" src="static/mashable.png" alt="mashable-logo">
